--- a/sig/sig-test/sig-info.yaml
+++ b/sig/sig-test/sig-info.yaml
@@ -4,7 +4,7 @@ mailing_list:
 meeting_url: 
 mature_level:
 maintainers:
-- gitee_id: qiansongwh
+- gitee_id: wwwwanghao
   name: wanghao1
   organization: 
   email: 123@163.com
